trying to fix compile errors